@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-12T01:20:36Z",
-  "count" : 2,
+  "timestamp" : "2022-05-25T08:20:12Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 0,
+  "count_decinc" : [ -1, +0 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_decinc" : [ -0, +0 ]
 }
