@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-05-24T16:22:50Z",
+  "timestamp" : "2022-05-25T08:20:12Z",
   "count_outdated" : 289,
   "uniques_outdated" : 159,
-  "count" : 324,
+  "count" : 323,
   "uniques" : 181,
   "clones" : [
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
